canary/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
  labels:
    app: canary-deployment
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-deployment
      version: canary
  template:
    metadata:
      labels:
        app: canary-deployment
        version: canary
    spec:
      containers:
        - name: canary-deployment
          image: mughis01/canary-deployment:canary
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
