canary/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-stable
  labels:
    app: canary-deployment
    version: stable
spec:
  replicas: 4
  selector:
    matchLabels:
      app: canary-deployment
      version: stable
  template:
    metadata:
      labels:
        app: canary-deployment
        version: stable
    spec:
      containers:
        - name: canary-deployment
          image: mughis01/canary-deployment:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
