canary/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-deployment-gateway-nodeport
spec:
  selector:
    app.kubernetes.io/name: canary-deployment-gateway-nginx # controller pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30090
  type: NodePort
