canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-stable
spec:
  selector:
    app: canary-deployment
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: service-canary
spec:
  selector:
    app: canary-deployment
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
