canary/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-split-route
spec:
  parentRefs:
    - name: canary-deployment-gateway
  rules:
    backendRefs:
      # Stable service with 80% traffic
      - name: service-stable
        port: 80
        weight: 80
      # Canary service with 20% traffic
      - name: service-canary
        port: 80
        weight: 20
